Tue Sep 13 05:37:15 2011  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (Init_IO): update BINARY comment.  it should not change the
	  encoding of the result to ASCII-8BIT.  [ruby-talk:387719]

Mon Sep 12 19:55:00 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_thread_select): fix to ignore an argument
	  modification of rb_thread_fd_select().
	  based on a patch by Eric Wong. [Bug #5306] [ruby-core:39435]
	* thread.c (rb_fd_rcopy): New. for reverse fd copy.

	* test/-ext-/old_thread_select/test_old_thread_select.rb
	(test_old_select_false_positive): test for bug5306.

	* ext/-test-/old_thread_select/old_thread_select.c (fdset2array):
	  New. convert fdsets to array.
	* ext/-test-/old_thread_select/old_thread_select.c (old_thread_select):
	  return 'read', 'write', 'except' argument of rb_thread_select()
	  to ruby script.

Mon Sep 12 13:38:12 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* README.EXT, README.EXT.ja (2.2.2), parse.y (rb_check_id): add
	  documents for rb_check_id().

Mon Sep 12 12:53:39 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/rake/file_list.rb (Rake::FileList#egrep): there is no need to
	  open files in binary mode.
	  see more details in https://github.com/jimweirich/rake/issues/74

Mon Sep 12 12:42:36 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_exception.rb (TestException#test_exit_success_p):
	  assert also the cases when exiting with true and false.

	* lib/test/unit/assertions.rb (assert_send): make arguments in
	  the default message clearer.

Sun Sep 11 05:23:14 2011  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb: Deal with subclasses of Matrix [redmine #5307]

Sat Sep 10 13:38:20 2011  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* dir.c (dir_s_aref):
	* dir.c (dir_entries): Two small documentation fixes.
	  A patch from Aaron Lerch. [Bug #5302] [ruby-core:39404]

Sat Sep 10 08:30:03 2011  Koichi Sasada  <ko1@atdot.net>
