@@ -1,3 +1,8 @@
+Tue Sep 13 15:02:48 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/pstore.rb (PStore): always open in binary mode even if
+	  default encodings are set.  [Bug #5311] [ruby-core:39503]
+
 Tue Sep 13 05:37:15 2011  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* io.c (Init_IO): update BINARY comment.  it should not change the
